fixed spacing issues on ourstory

--- a/jamiandnick/styles/style.css
+++ b/jamiandnick/styles/style.css
@@ -97,13 +97,14 @@ footer a:hover {
 .ourstory-images {
     display: block;
     float: left;
-    margin-left: 300px;
+    margin-left: 200px;
     margin-bottom: 50px;
+    margin-right: 100px;
 }
 .ourstory-content {
     width: 80%;
     font-size: 25px;
     text-align: center;
     grid-column: 2/3;
-    margin-top: 100px;   
+       
 }
